# nexus-core

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 412b6cf3c1e1_add_feedback_column_to_messages.py  50e4439ee7d7_add_new_bot_fields_and_chat_tables.py  721f3c2a5424_initial_schema.py  8f3d7a1c9e5b_add_is_official_to_users.py  9c4542e79a68_sync_timezone_and_clerk_id.py  a1b2c3d4e5f6_add_faqs_table.py  a1b2c3d4e5f6_rename_supabase_uid_to_clerk_user_id.py  a7c1f2d9e4b8_add_redteam_manage_fields.py  b3e5f7a2c9d4_make_users_email_nullable.py  b4d8f2a1c6e9_add_glossary_and_bot_chat_toggles.py  b8d2e3f4a5c6_add_redteam_manage_feedback.py  c327dc926a4a_add_use_rag_to_bots.py  c7f8e2a91b3d_add_feedback_reasons_and_comment.py  d1e2f3a4b5c6_add_citations_followups_to_messages.py  e7c2a9d4f861_add_clarifications_to_messages.py  e7d9c3b1a5f2_add_redteam_testbot_evals.py  eaa5c93b1bf2_add_bot_kakao_channels.py  (+3 more)
backend/app/: main.py
backend/scripts/: assign_redteam.py  import_redteam.py  init-db.sql  probe_hanaro.sh  seed_bots.py  setup_db.py  tag_faq_autorespond.py
backend/tests/: conftest.py  test_chat_history.py  test_chat_stream_errors.py  test_crisis_service.py  test_followups_parser.py  test_kakao_callback.py  test_kakao_schema.py  test_kakao_service.py  test_kakao_worker.py  test_rag_citation_m2.py  test_rag_config.py  test_rag_interactions.py  test_rag_replace.py  test_safety_block.py
(+364 files in other folders)
